--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: MetaNeighbor
 Type: Package
 Title: Method to rapidly assess cell type identity using gene sets
-Version: 0.0.0.9000
+Version: 0.99.0
 Author@R: c(
     person("Megan", "Crow", email = "mcrow@cshl.edu",role = c("aut", "cre")),
     person("Jesse", "Gillis", email = "JGillis@cshl.edu",role = c("aut")),
@@ -10,17 +10,21 @@ Author@R: c(
 Author: c(
     person("Megan", "Crow", email = "mcrow@cshl.edu",role = c("aut", "cre")),
     person("Jesse", "Gillis", email = "JGillis@cshl.edu",role = c("aut")))
-Maintainer: Megan Crow <mcrow@cshl.edu>
-Description: MetaNeighbor is a replication framework, that allows researchers to quantify the
-    degree to which cell types replicate across datasets, and to rapidly identify clusters 
-    with high similarity for further testing. It calculates correlations between all pairs of
-    cells that user aims to compare across datasets based on the expression of a set of 
-    genes. It then performs crosdataset validation by hiding all type labels for one dataset 
-    at a time. Finally it predicts the cell type labels of the test set by running a neighbor
-    voting algorithm to predict the identity of the held-out cells based on the similarity to
-    the training data.
+Description: MetaNeighbor is a replication framework, that allows researchers to
+    quantify the degree to which cell types replicate across datasets, and to
+    rapidly identify clusters with high similarity for further testing. It 
+    calculates correlations between all pairs of cells that user aims to compare
+    across datasets based on the expression of a set of genes. It then performs
+    crosdataset validation by hiding all type labels for one dataset at a time.
+    Finally it predicts the cell type labels of the test set by running a 
+    neighbor voting algorithm to predict the identity of the held-out cells
+    based on the similarity to the training data.
+biocViews: GeneExpression, MultipleComparison, SingleCell, Transcriptomics
 License: MIT + file LICENSE
-Depends: R(>= 3.4.2)
-Imports: gplots (>= 3.0.1), RColorBrewer (>= 1.1-2)
+Depends: R(>= 3.4)
+Imports: stats (>= 3.4), utils (>= 3.4)
 Suggests: knitr (>= 1.17), rmarkdown (>= 1.6), testthat (>= 1.0.2)
 LazyData: true
+RoxygenNote: 6.0.1
+VignetteBuilder: knitr
+Maintainer: Megan Crow <mcrow@cshl.edu>
