--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,4 +27,4 @@ Suggests: knitr (>= 1.17), rmarkdown (>= 1.6), testthat (>= 1.0.2)
 LazyData: true
 RoxygenNote: 6.0.1
 VignetteBuilder: knitr
-Maintainer: Megan Crow <mcrow@cshl.edu>
+Maintainer: Manthan Shah <shah@cshl.edu>
