--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,13 @@
 Package: MetaNeighbor
 Type: Package
 Title: Method to rapidly assess cell type identity using gene sets
-Version: 0.99.3
+Version: 0.99.4
 Author@R: c(
     person("Megan", "Crow", email = "mcrow@cshl.edu",role = c("aut", "cre")),
     person("Sara", "Ballouz", email = "sballouz@cshl.edu",role = c("ctb")),
     person("Manthan", "Shah", email = "shah@cshl.edu",role = c("ctb")),
     person("Jesse", "Gillis", email = "JGillis@cshl.edu",role = c("aut")))
-Author: c(
-    person("Megan", "Crow", email = "mcrow@cshl.edu",role = c("aut", "cre")),
+Author: c(person("Megan", "Crow", email = "mcrow@cshl.edu",role = c("aut", "cre")),
     person("Jesse", "Gillis", email = "JGillis@cshl.edu",role = c("aut")))
 Description: MetaNeighbor is a replication framework, that allows researchers to
     quantify the degree to which cell types replicate across datasets, and to
@@ -21,8 +20,13 @@ Description: MetaNeighbor is a replication framework, that allows researchers to
     based on the similarity to the training data.
 biocViews: GeneExpression, MultipleComparison, SingleCell, Transcriptomics
 License: MIT + file LICENSE
-Depends: R(>= 3.5)
-Imports: stats (>= 3.4), SummarizedExperiment (>= 1.6.5), utils (>= 3.4)
+Depends: R(>= 3.4)
+Imports: beanplot (>= 1.2),
+         gplots (>= 3.0.1), 
+         RColorBrewer (>= 1.1), 
+         stats (>= 3.4), 
+         SummarizedExperiment (>= 1.6.5), 
+         utils (>= 3.4)
 Suggests: knitr (>= 1.17), rmarkdown (>= 1.6), testthat (>= 1.0.2)
 LazyData: true
 RoxygenNote: 6.0.1
