added packages using import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,6 @@ export(MetaNeighborUS)
 export(neighborVoting)
 export(topHits)
 export(variableGenes)
+import(RColorBrewer)
+import(gplots)
+import(utils)
