--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: MetaNeighbor
 Type: Package
 Title: Method to rapidly assess cell type identity using gene sets
 Version: 0.99.12
-Author@R: c(person("Megan", "Crow", email = "mcrow@cshl.edu",role = c("aut", "cre")),
+Authors@R: c(person("Megan", "Crow", email = "mcrow@cshl.edu",role = c("aut", "cre")),
     person("Sara", "Ballouz", email = "sballouz@cshl.edu",role = c("ctb")),
     person("Manthan", "Shah", email = "shah@cshl.edu",role = c("ctb")),
     person("Jesse", "Gillis", email = "JGillis@cshl.edu",role = c("aut")))
