--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,15 +6,8 @@ Authors@R: c(person("Megan", "Crow", email = "mcrow@cshl.edu",role = c("aut", "c
     person("Sara", "Ballouz", email = "sballouz@cshl.edu",role = c("ctb")),
     person("Manthan", "Shah", email = "shah@cshl.edu",role = c("ctb")),
     person("Jesse", "Gillis", email = "JGillis@cshl.edu",role = c("aut")))
-Description: MetaNeighbor is a replication framework, that allows researchers to
-    quantify the degree to which cell types replicate across datasets, and to
-    rapidly identify clusters with high similarity for further testing. It 
-    calculates correlations between all pairs of cells that user aims to compare
-    across datasets based on the expression of a set of genes. It then performs
-    crosdataset validation by hiding all type labels for one dataset at a time.
-    Finally it predicts the cell type labels of the test set by running a 
-    neighbor voting algorithm to predict the identity of the held-out cells
-    based on the similarity to the training data.
+Description: MetaNeighbor allows users to quantify cell type replicability 
+    across datasets using neighbor voting.
 biocViews: GeneExpression, GO, MultipleComparison, SingleCell, Transcriptomics
 License: MIT + file LICENSE
 Depends: R(>= 3.4)
