--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: MetaNeighbor
 Type: Package
-Title: Method to rapidly assess cell type identity using gene sets
+Title: Single cell replicability analysis
 Version: 0.99.14
 Authors@R: c(person("Megan", "Crow", email = "mcrow@cshl.edu",role = c("aut", "cre")),
     person("Sara", "Ballouz", email = "sballouz@cshl.edu",role = c("ctb")),
