--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,7 @@ Version: 1.3.1
 Authors@R: c(person("Megan", "Crow", email = "mcrow@cshl.edu",role = c("aut", "cre")),
     person("Sara", "Ballouz", email = "sballouz@cshl.edu",role = c("ctb")),
     person("Manthan", "Shah", email = "shah@cshl.edu",role = c("ctb")),
+	person("Stephan", "Fischer", email = "fischer@cshl.edu",role = c("ctb")),
     person("Jesse", "Gillis", email = "JGillis@cshl.edu",role = c("aut")))
 Description: MetaNeighbor allows users to quantify cell type replicability across 
     datasets using neighbor voting.
