--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 1.3.1
 Authors@R: c(person("Megan", "Crow", email = "mcrow@cshl.edu",role = c("aut", "cre")),
     person("Sara", "Ballouz", email = "sballouz@cshl.edu",role = c("ctb")),
     person("Manthan", "Shah", email = "shah@cshl.edu",role = c("ctb")),
-	person("Stephan", "Fischer", email = "fischer@cshl.edu",role = c("ctb")),
+    person("Stephan", "Fischer", email = "fischer@cshl.edu",role = c("ctb")),
     person("Jesse", "Gillis", email = "JGillis@cshl.edu",role = c("aut")))
 Description: MetaNeighbor allows users to quantify cell type replicability across 
     datasets using neighbor voting.
@@ -14,12 +14,12 @@ License: MIT + file LICENSE
 Depends: R(>= 3.5)
 Imports: beanplot (>= 1.2),
          gplots (>= 3.0.1), 
-         RColorBrewer (>= 1.1), 
+		 RColorBrewer (>= 1.1), 
          stats (>= 3.4),
-         SummarizedExperiment (>= 1.6.5), 
          utils (>= 3.4)
+LinkingTo: Rcpp
 Suggests: knitr (>= 1.17), rmarkdown (>= 1.6), testthat (>= 1.0.2)
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
 VignetteBuilder: knitr
 Maintainer: Manthan Shah <shah@cshl.edu>
