--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,9 +13,14 @@ biocViews: ImmunoOncology, GeneExpression, GO, MultipleComparison, SingleCell, T
 License: MIT + file LICENSE
 Depends: R(>= 3.5)
 Imports: beanplot (>= 1.2),
-         gplots (>= 3.0.1), 
-		 RColorBrewer (>= 1.1), 
-         stats (>= 3.4),
+         GenomicRanges (>= 1.34.0),
+         gplots (>= 3.0.1),
+         Matrix (>= 1.2),
+         matrixStats (>= 0.54),
+         Rcpp,
+		 RColorBrewer (>= 1.1),
+		 stats (>= 3.4),
+		 SummarizedExperiment (>= 1.12),
          utils (>= 3.4)
 LinkingTo: Rcpp
 Suggests: knitr (>= 1.17), rmarkdown (>= 1.6), testthat (>= 1.0.2)
